# rag-starter-kit

./: .env.development  .env.example  .env.production  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  IMPROVEMENTS.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env  .env.test  .flake8  Dockerfile  MIGRATION_README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  validate_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_database_schema.py  002_rename_metadata_columns.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: documents.py  health.py  search.py
backend/app/core/: __init__.py  auth.py  cache.py  circuit_breaker.py  config.py  database.py  error_tracking.py  metrics.py  rate_limiting.py  tracing.py
backend/app/models/: __init__.py  database.py  documents.py  search.py
backend/app/services/: __init__.py  document_service.py
backend/app/services/ingestion/: __init__.py  chunk_processor.py  document_processor.py  text_extractor.py
backend/app/services/search/: __init__.py  embedding_service.py  hybrid_search.py  keyword_search.py  search_manager.py  vector_search.py
backend/app/services/vectordb/: __init__.py  base.py  chroma_db.py  factory.py  pinecone_db.py  weaviate_db.py
backend/scripts/: init.sql
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py
backend/tests/core/: test_auth.py  test_circuit_breaker.py
docs/: 1_Architecture_Overview.md  2_Technology_Stack_Rationale.md  3_Data_Flow_Document_Ingestion.md  4_Data_Flow_Hybrid_Search.md  5_Vector_Database_Abstraction_Layer.md  6_Deployment_and_Infrastructure.md  7_Security_and_Compliance.md
docs/ADRs/: 001-use-of-hybrid-search-over-vector-only.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  config.ts
monitoring/: prometheus.yml
monitoring/grafana/: dashboards.yml
monitoring/grafana/dashboards/: rag-detailed-metrics.json  rag-platform-overview.json
monitoring/grafana/datasources/: prometheus.yml
